# badgerdoc

annotation/: .env
annotation/app/: models.py
annotation/app/annotations/: main.py  resources.py
annotation/app/categories/: services.py
annotation/app/schemas/: __init__.py
annotation/tests/: test_category_crud.py
common/text_pdf_converter/: main.py  pyproject.toml
common/text_pdf_converter/tests/: etalon_page.txt  page.txt  some_text.txt
convert/src/: .env  config.py
convert/src/microservice_communication/: assets.py  jobs.py  taxonomy.py
convert/src/routers/: routers.py
convert/src/utils/: common_utils.py
convert/src/wip_vertex_converter/: main.py  requirments.txt
convert/src/wip_vertex_converter/tests/: badgerdoc_annotation.json  badgerdoc_tokens.json  test_import.py
pipelines/: .env
pipelines/src/: config.py  execution.py  result_processing.py  s3.py  utils.py
pipelines/tests/: test_result_processing.py  test_utils.py
processing/src/utils/: minio_utils.py
users/: .env
users/src/: config.py  main.py  s3.py  utils.py
users/src/keycloak/: query.py
