[tool.poetry]
name = "with_pymupdf"
version = "0.1.0"
description = ""
authors = ["Sergei Smolov <sergei_smolov@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMuPDF = "^1.21.0"

[tool.poetry.dev-dependencies]
black = "isort"
isort = "^5.10.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
